Fix: navbar expand collapse from lg breakpoint to sm and change footer links to icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,18 @@
 
 /*footer*/
 footer {
-    background-color:blue;
+    background-color:lightgrey;
     height: 8vh;
 }
 
 .social-icons {
     width:100%;
     margin: 0 auto;
-    padding-top: 12px;
+    padding-top: 15px;
+}
+
+.social-icon a {
+    color:darkslategrey;
 }
 
 .social-icon {
